test/files/neg/t1432.check
t1432.scala:12: error: type mismatch;
 found   : (Int, Bug_NoUnique.Alias2[Bug_NoUnique.Wrap[Unit]] => Double)
    (which expands to)  (Int, Bug_NoUnique.Wrap[Bug_NoUnique.Wrap[Unit]] => Double)
 required: Bug_NoUnique.TypeCon[Unit]
    (which expands to)  (Int, Unit => Double)
  def test(x : TypeCon[Wrap[Unit]]) : TypeCon[Unit] = wrap(x)
                                                          ^
one error found
